--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -29,7 +29,7 @@
     <link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css" rel="stylesheet" />
     <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
     
-    <title>React App</title>
+    <title>Prowess Agrícola</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
